# Doc-RAG

./: README.md  supabase_setup.sql
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: auth.py  documents.py
backend/app/core/: config.py  security.py
backend/app/models/: schemas.py
backend/app/services/: chat_history.py  embeddings.py  llm.py  vector_store.py
backend/prisma/: schema.prisma
backend/tests/: test_api.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/chat/: page.js
frontend/src/app/login/: page.js
frontend/src/app/signup/: page.js
frontend/src/components/: DocumentViewer.js  DocumentsModal.js  Navbar.js  VoiceInput.js
frontend/src/lib/: auth.js
